--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://abhisektomar1.github.io/keeper-app",
   "name": "keeper-part-3-completed",
   "version": "1.0.0",
   "description": "",
@@ -10,10 +11,13 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run built",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
